# braphin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements-eeg.txt  requirements-gnn.txt  requirements-lock.txt  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
Examples/: EEGraph_Example.ipynb  NEW_ejemplo_uso_eeg.ipynb  NEW_ejemplo_uso_fmri.ipynb
braphin/: __init__.py  atlas.py  bands.py  config.py  connectivity.py  denoise.py  exceptions.py  graph.py  graph_metrics.py  importBRAPHINData.py  importEEGData.py  model.py  modelateData.py  preprocess.py  strategy.py  tools.py  transform.py  visualize.py
braphin/atlas_centroids/: aal_centroids.json  schaefer_100_centroids.json  schaefer_200_centroids.json  schaefer_400_centroids.json
braphin/io/: __init__.py  nifti.py  tabular.py
docs/: api_reference.html  changelog.html  contributing.html  index.html  installation.html  style.css  user_guide.html
eegraph/: graph.py  importData.py  modelateData.py  strategy.py  tools.py
eegraph/io/: __init__.py  deap.py
experiments/: README.md  gnn_parkinson.py  graph_metrics_analysis.py
project/: main.py
project/src/: biomarker.py  duplicate_resolution.py  explainability.py  exploratory.py  prediction.py  preprocessing.py  robustness.py  som_analysis.py  synthetic_outcomes.py  utils.py
tests/: conftest.py  test_atlas.py  test_bands.py  test_config_validation.py  test_connectivity.py  test_connectivity_model.py  test_denoise.py  test_graph.py  test_graph_metrics.py  test_importBRAPHINData.py  test_io.py  test_model.py  test_modelate.py  test_pipeline.py  test_preprocess.py  test_preprocess_new_steps.py  test_transform.py  test_visualize.py
