[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "braphin"
version = "1.0.0"
description = "fMRI functional connectivity pipeline with graph and GNN support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David Ortega Lozano" },
]
maintainers = [
    { name = "David Ortega Lozano" },
]
keywords = [
    "fMRI", "neuroimaging", "functional connectivity",
    "brain graphs", "graph neural networks", "BOLD", "resting-state",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Core dependencies (braphin package only)
dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
]

[project.urls]
Homepage       = "https://github.com/ufvceiec/braphin"
Documentation  = "https://ufvceiec.github.io/braphin/"
Repository     = "https://github.com/ufvceiec/braphin"
"Bug Tracker"  = "https://github.com/ufvceiec/braphin/issues"
Changelog      = "https://github.com/ufvceiec/braphin/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# EEG module (eegraph package)
eeg = [
    "mne>=1.5",
    "pandas>=2.0",
    "antropy>=0.1.6",
    "plotly>=5.0",
    "scot>=0.19",
]

# Graph Neural Network scripts
gnn = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

# Everything at once
all = [
    "braphin[eeg,gnn,dev]",
]

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["braphin*", "eegraph*"]

[tool.setuptools.package-data]
braphin = [
    "atlases/*.nii.gz",
    "atlas_centroids/*.json",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["braphin"]
omit = ["tests/*", "*/atlases/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Ruff linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]   # line length handled by formatter

# ---------------------------------------------------------------------------
# Mypy static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # nibabel stubs not available
